# rust-grpc-demo

./: Cargo.toml  README.md  build.rs
proto/: helloworld.proto
src/: client.rs  main.rs  service.rs
