[package]
name = "grpc"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "grpc-service"
path = "src/service.rs"


[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.7"